# tmflib

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  output.txt  release-plz.toml
.github/workflows/: docs.yml
examples/: cart_to_order.rs  convert_to_ref.rs  create_address.rs  create_agreement.rs  create_alarm.rs  create_appointment.rs  create_billing_account.rs  create_catalog.rs  create_component.rs  create_cost.rs  create_customer.rs  create_customer_bill.rs  create_customer_event.rs  create_document.rs  create_event.rs  create_individual.rs  create_individual_event.rs  create_message.rs  create_offer.rs  create_organization.rs  create_party_role.rs  create_payment.rs  create_performance.rs  create_permission.rs  create_poq.rs  create_product_order.rs  create_product_stock.rs  create_quote.rs  create_quote_event.rs  create_recommendation.rs  create_resource.rs  create_resource_candidate.rs  create_risk_assessment.rs  create_sales_lead.rs  create_sales_opportunity.rs  create_sample.rs  create_service_candidate.rs  create_service_test.rs  create_shipping_order.rs  create_shopping_cart.rs  (+18 more)
json/: account.json
open_api/: TMF628_Performance-v5.0.0.oas.yaml  TMF635_Usage_Management_API_v4.0.0_swagger.json  TMF640-Service_Activation_and_Configuration-v5.0.0.oas.yaml  TMF644-Privacy-v5.0.0.oas.yaml  TMF671-Promotion_Management-v5.0.0.oas.yaml  TMF717-Customer360-v5.0.1.oas.yaml  TMF723-Policy_Management-v5.0.0.oas.json  TMF723-Policy_Management-v5.0.0.oas.yaml  TMF909_Network_as_a_Service_Management_API_v4.2.0_beta_swagger.json
src/: client.rs  lib.rs  tmf620.rs
src/common/: addressable.rs  attachment.rs  atttachment.rs  contact.rs  entity.rs  entity_ref.rs  event.rs  extensible.rs  external_identifier.rs  mod.rs  money.rs  note.rs  price.rs  product.rs  related_entity.rs  related_party.rs  related_place.rs  tax_item.rs  tmf_error.rs
src/tmf620/: bundled_product_offering.rs  catalog.rs  category.rs  mod.rs  party.rs  product_offering.rs  product_offering_price.rs  product_offering_v5.rs  product_specification.rs  tmf620.rs  tmf620_catalog_management.rs
src/tmf621/: mod.rs  trouble_ticket.rs
src/tmf622/: milestone.rs  mod.rs  product_order.rs  product_order_item.rs  product_order_v4.rs  product_order_v5.rs  tmf622_product_order_managment.rs
src/tmf628/: addressable_fvo.rs  addressable_mvo.rs  administrative_state.rs  attachment_ref.rs  attachment_ref_fvo.rs  attachment_ref_mvo.rs  characteristic.rs  characteristic_fvo.rs  characteristic_mvo.rs  characteristic_relationship.rs  characteristic_relationship_fvo.rs  characteristic_relationship_mvo.rs  collection_type.rs  compression_enum_type.rs  compression_type.rs  data_access_endpoint.rs  data_access_endpoint_fvo.rs  data_access_endpoint_mvo.rs  data_filter_attribute.rs  data_filter_attribute_string_array.rs  data_filter_map.rs  data_filter_map_fvo.rs  data_filter_map_item.rs  data_filter_map_item_fvo.rs  data_filter_map_item_mvo.rs  data_filter_map_mvo.rs  data_filter_template.rs  data_filter_template_fvo.rs  data_filter_template_mvo.rs  day_of_month_recurrence.rs  day_of_month_recurrence_fvo.rs  day_of_month_recurrence_mvo.rs  day_of_week_recurrence.rs  day_of_week_recurrence_fvo.rs  day_of_week_recurrence_mvo.rs  duration.rs  entity.rs  entity_ref.rs  entity_ref_fvo.rs  entity_ref_mvo.rs  (+100 more)
src/tmf629/: characteristic.rs  contact.rs  customer.rs  mod.rs  tmf629_customer_management.rs
src/tmf632/: individual.rs  individual_v4.rs  individual_v5.rs  mod.rs  organization.rs  organization_v4.rs  organization_v5.rs
src/tmf633/: characteristic_specification.rs  mod.rs  service_candidate.rs  service_catalog.rs  service_category.rs  service_specification.rs
src/tmf634/: catalog.rs  mod.rs  resource_candidate.rs  resource_category.rs  resource_specification.rs
src/tmf635/: any.rs  association_specification_ref.rs  attachment_ref_or_value.rs  characteristic_relationship.rs  characteristic_specification.rs  characteristic_specification_relationship.rs  characteristic_value_specification.rs  constraint_ref.rs  entity_specification_relationship.rs  event_subscription.rs  event_subscription_input.rs  mod.rs  money.rs  product_ref.rs  quantity.rs  rated_product_usage.rs  related_party.rs  target_entity_schema.rs  time_period.rs  usage.rs  usage_attribute_value_change_event.rs  usage_attribute_value_change_event_payload.rs  usage_characteristic.rs  usage_create.rs  usage_create_event.rs  usage_create_event_payload.rs  usage_delete_event.rs  usage_delete_event_payload.rs  usage_specification.rs  usage_specification_attribute_value_change_event.rs  usage_specification_attribute_value_change_event_payload.rs  usage_specification_create.rs  usage_specification_create_event.rs  usage_specification_create_event_payload.rs  usage_specification_delete_event.rs  usage_specification_delete_event_payload.rs  usage_specification_ref.rs  usage_specification_update.rs  usage_state_change_event.rs  usage_state_change_event_payload.rs  (+2 more)
src/tmf637/: mod.rs  product.rs  tmf637_product_inventory.rs
src/tmf638/: mod.rs  service.rs  tmf638_service_inventory_management.rs
src/tmf639/: characteristic.rs  mod.rs  resource.rs
src/tmf640/: addressable.rs  attachment_ref_or_value.rs  attachment_ref_or_value_fvo.rs  attachment_ref_or_value_mvo.rs  calendar_period.rs  calendar_period_fvo.rs  calendar_period_mvo.rs  characteristic.rs  characteristic_fvo.rs  characteristic_mvo.rs  characteristic_relationship.rs  characteristic_relationship_fvo.rs  characteristic_relationship_mvo.rs  context_update.rs  context_update_mvo.rs  entity.rs  entity_ref.rs  entity_ref_mvo.rs  entity_ref_or_value.rs  entity_ref_or_value_fvo.rs  entity_ref_or_value_mvo.rs  extensible.rs  external_identifier.rs  external_identifier_fvo.rs  external_identifier_mvo.rs  feature.rs  feature_fvo.rs  feature_mvo.rs  feature_relationship.rs  feature_relationship_fvo.rs  feature_relationship_mvo.rs  geographic_sub_address_unit.rs  (+56 more)
tests/: events.rs  upgrade_bandwidth.rs
tmflib-derive/: Cargo.toml  README.md
tmflib-derive/src/: lib.rs
(+652 files in other folders)
