[package]
name = "tmflib"
version = "0.1.22"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Interface library for processing TMF payloads"
repository = "https://github.com/rruckley/tmflib"
license = "Apache-2.0"

[features]
tmf620 = ["tmf633","tmf651"]
tmf622 = ["tmf641"]
tmf629 = []
tmf632 = []
tmf633 = []
tmf637 = []
tmf638 = []
tmf639 = []
tmf641 = ["tmf646"]
tmf645 = []
tmf646 = []
tmf648 = ["tmf620"]
tmf651 = ["tmf648"]
tmf652 = []
tmf653 = []
tmf663 = []
tmf666 = []
tmf667 = []
tmf669 = []
tmf672 = []
tmf673 = []
tmf674 = []
tmf678 = []
tmf679 = []
tmf687 = []
tmf696 = []
tmf697 = []
tmf699 = []
tmf700 = []
tmf760 = []

# Build all V4 APIs
all-v4 = [
    "tmf620",
    "tmf622",
    "tmf629",
    "tmf632",
    "tmf633",
    "tmf637",
    "tmf641",
    "tmf646",
    "tmf648",
    "tmf653",
    "tmf666",
    "tmf667",
    "tmf679",
    "tmf674",
    "tmf678",
    "tmf687",
    "tmf696",
    "tmf697",
    "tmf699",
    "tmf700"
]

# Build V5 APIs
all-v5 = [
    "tmf620",
    "tmf622",
    "tmf629",
    "tmf632",
    "tmf637",
    "tmf674",
    "tmf678",
    "tmf696",
    "tmf699",
    "tmf760"
]

build-V4 = []
build-V5 = []

# Specifications referenced from common module
common = ["tmf620","tmf629","tmf632","tmf666","tmf667","tmf674"]

# ODA Component features
# Product Catalog Management
TMFC001-v4 = ["tmf620","common"]
# Product Order Capture and Validation
TMFC002-v4 = ["tmf622","common"]
# Product Order Delivery Orchestration and Management
TMFC003-v4 = ["common"]
TMFC004-v4 = ["common"]
# Product Inventory
TMFC005-v4 = ["tmf620","common"]
# Service Catalog Management
TMFC006-v4 = ["common"]
# Service Order Management
TMFC007-v4 = ["tmf641"]
# Service Inventory
TMFC008-v4 = ["tmf638"]
# Servicve Qualification Management
TMFC009-v4 = ["tmf645"]
# Resource Catalog Management
TMFC010-v4 = ["common"]
# Resource Order Management
TMFC011-v4 = ["tmf652"]
# Resource Inventory
TMFC012-v4 = ["tmf639"]
# Service Balance Management
TMFC013-v4 = ["common"]
# Location Management
TMFC014-v4 = ["tmf673","tmf674","common"]
# Service Usage Management
TMFC015-v4 = ["common"]
# Resource Usage Management
TMFC016-v4 = ["common"]
# API Management
TMFC017-v4 = ["common"]
# Enterprise Integration
TMFC018-v4 = ["common"]
# Event Management
TMFC019-v4 = ["common"]
# Digital Identity Management
TMFC020-v4 = ["common"]
# Party Privacy Management
TMFC022-v4 = ["common"]
# Party Interaction Management
TMFC023-v4 = ["common"]
# Billing Account Management
TMFC024-v4 = ["tmf666","common"]
# Billing Inquiries Management
TMFC025-v4 = ["common"]
# Debt Collection Management
TMFC026-v4 = ["common"]
# Product Configurator
TMFC027-v4 = ["tmf679","tmf760","common"]
# Party Management
TMFC028-v4 = ["common"]
# Payment Management
TMFC029-v4 = ["common"]
# Bill Generation Management
TMFC030-v4 = ["tmf678","common"]
# Bill Calculation Management
TMFC031-v4 = ["tmf678","common"]
# Supply Chain Management
TMFC032-v4 = ["common"]
# Purchase Management
TMFC033-v4 = ["common"]
# Party Roles Permissions Management
TMFC035-v4 = ["tmf672","tmf669","common"]
# Lead and Opportunity Management
TMFC036-v4 = ["tmf699","common"]
# Service Performance Management
TMFC037-v4 = ["common"]
# Resource Performance Management
TMFC038-v4 = ["common"]
# Agreement Management
TMFC039-v4 = ["tmf651","common"]
# Product Usage Management
TMFC040-v4 = ["common"]
# Anomaly Detector
TMFC041-v4 = ["common"]
# Anomaly Predictor
TMFC042-v4 = ["common"]
# Anomaly Mitigator
TMFC043-v4 = ["common"]
# Strategic Resource Planning
TMFC044-v4 = ["common"]
# Resource Discovery and Reconciliation
TMFC045-v4 = ["common"]
# Workforce Management
TMFC046-v4 = ["tmf646"]
# Party Problem Management
TMFC047-v4 = ["common"]
# Sales Strategy & Planning
TMFC048-v4 = ["common"]
# Marketing Communications
TMFC049-v4 = ["common"]
# Recommendation Management
TMFC050-v4 = ["common"]
# Document Management
TMFC051-v4 = ["common"]
# IT and Network Infrastructure Management
TMFC052-v4 = ["common"]
# Service Quality Management
TMFC053-v4 = ["common"]
# Product Test Management
TMFC054-v4 = ["common"]
# Service Test Management
TMFC055-v4 = ["common"]
# Resource Test Management
TMFC056-v4 = ["common"]
# Campaign Management
TMFC057-v4 = ["common"]
# Product/Sales Performance Management
TMFC058-v4 = ["common"]
# Commission Management
TMFC059-v4 = ["common"]
# Knowledge Management
TMFC060-v4 = ["common"]
# Work Order Management
TMFC061-v4 = ["common"]
# Resource Configuration and Activation
TMFC062-v4 = ["common"]

default = ["TMFC035-v4","build-V4"]

[dependencies]
chrono = "0.4.38"
rust_iso4217 = "0.1.1"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sha256 = { version = "1.5", default-features = false }
uuid = { version = "1.8.0", features = ["v4"]}
tmflib-derive = { version = "0.1.28" }
# tmflib-derive = { path = "tmflib-derive"}
hex = "0.4.3"
base32 = "0.5.0"
openapiv3 = "2.0.0"

[dev-dependencies]

