[package]
name = "tmflib"
version = "0.1.26"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Interface library for processing TMF payloads"
repository = "https://github.com/rruckley/tmflib"
license = "Apache-2.0"
allow_dirty = true

[features]
tmf620 = ["tmf633","tmf634","tmf651"]
tmf621 = []
tmf622 = ["tmf641"]
tmf629 = []
tmf632 = []
tmf633 = []
tmf634 = []
tmf637 = []
tmf638 = []
tmf639 = []
tmf641 = ["tmf646"]
tmf645 = []
tmf646 = []
tmf648 = ["tmf620"]
tmf651 = ["tmf648"]
tmf652 = []
tmf653 = []
tmf663 = []
tmf666 = []
tmf667 = []
tmf669 = []
tmf672 = []
tmf673 = []
tmf674 = ["tmf673","build-V4"]
tmf678 = []
tmf679 = []
tmf681 = []
tmf687 = []
tmf696 = []
tmf697 = []
tmf699 = []
tmf700 = []
tmf724 = []
tmf760 = []

# Build all V4 APIs
all = [
    "tmf620",
    "tmf621",
    "tmf622",
    "tmf629",
    "tmf632",
    "tmf633",
    "tmf634",
    "tmf637",
    "tmf638",
    "tmf639",
    "tmf641",
    "tmf646",
    "tmf648",
    "tmf653",
    "tmf663",
    "tmf666",
    "tmf667",
    "tmf669",
    "tmf672",
    "tmf673",
    "tmf674",
    "tmf679",
    "tmf681",
    "tmf674",
    "tmf678",
    "tmf687",
    "tmf696",
    "tmf697",
    "tmf699",
    "tmf700",
    "tmf724",
    "tmf760"
]

build-V4 = []
build-V5 = []

# Specifications referenced from common module
common = ["tmf620","tmf629","tmf632","tmf666","tmf667","tmf669","tmf674"]

# ODA Component features
# Product Catalog Management
TMFC001 = ["tmf620","common"]
# Product Order Capture and Validation
TMFC002 = ["tmf622","tmf648","tmf663","common"]
# Product Order Delivery Orchestration and Management
TMFC003 = ["common"]
TMFC004 = ["common"]
# Product Inventory
TMFC005 = ["tmf620","common"]
# Service Catalog Management
TMFC006 = ["common"]
# Service Order Management
TMFC007 = ["tmf641"]
# Service Inventory
TMFC008 = ["tmf638"]
# Servicve Qualification Management
TMFC009 = ["tmf645"]
# Resource Catalog Management
TMFC010 = ["common"]
# Resource Order Management
TMFC011 = ["tmf652"]
# Resource Inventory
TMFC012 = ["tmf639"]
# Service Balance Management
TMFC013 = ["common"]
# Location Management
TMFC014 = ["tmf673","tmf674","common"]
# Service Usage Management
TMFC015 = ["common"]
# Resource Usage Management
TMFC016 = ["common"]
# API Management
TMFC017 = ["common"]
# Enterprise Integration
TMFC018 = ["common"]
# Event Management
TMFC019 = ["common"]
# Digital Identity Management
TMFC020 = ["common"]
# Party Privacy Management
TMFC022 = ["common"]
# Party Interaction Management
TMFC023 = ["common"]
# Billing Account Management
TMFC024 = ["tmf666","common"]
# Billing Inquiries Management
TMFC025 = ["common"]
# Debt Collection Management
TMFC026 = ["common"]
# Product Configurator
TMFC027 = ["tmf679","tmf760","common"]
# Party Management
TMFC028 = ["common"]
# Payment Management
TMFC029 = ["common"]
# Bill Generation Management
TMFC030 = ["tmf678","common"]
# Bill Calculation Management
TMFC031 = ["tmf678","common"]
# Supply Chain Management
TMFC032 = ["common"]
# Purchase Management
TMFC033 = ["common"]
# Party Roles Permissions Management
TMFC035 = ["tmf672","tmf669","common"]
# Lead and Opportunity Management
TMFC036 = ["tmf699","common"]
# Service Performance Management
TMFC037 = ["common"]
# Resource Performance Management
TMFC038 = ["common"]
# Agreement Management
TMFC039 = ["tmf651","common"]
# Product Usage Management
TMFC040 = ["common"]
# Anomaly Detector
TMFC041 = ["common"]
# Anomaly Predictor
TMFC042 = ["common"]
# Anomaly Mitigator
TMFC043 = ["common"]
# Strategic Resource Planning
TMFC044 = ["common"]
# Resource Discovery and Reconciliation
TMFC045 = ["common"]
# Workforce Management
TMFC046 = ["tmf646"]
# Party Problem Management
TMFC047 = ["common"]
# Sales Strategy & Planning
TMFC048 = ["common"]
# Marketing Communications
TMFC049 = ["common"]
# Recommendation Management
TMFC050 = ["common"]
# Document Management
TMFC051 = ["common"]
# IT and Network Infrastructure Management
TMFC052 = ["common"]
# Service Quality Management
TMFC053 = ["common"]
# Product Test Management
TMFC054 = ["common"]
# Service Test Management
TMFC055 = ["common"]
# Resouce Test Management
TMFC056 = ["common"]
# Campaign Management
TMFC057 = ["common"]
# Product/Sales Performance Management
TMFC058 = ["common"]
# Commission Management
TMFC059 = ["common"]
# Knowledge Management
TMFC060 = ["common"]
# Work Order Management
TMFC061 = ["common"]
# Resource Configuration and Activation
TMFC062 = ["common"]

default = ["all","build-V4"]

[dependencies]
chrono = "0.4.39"
rust_iso4217 = "0.1.1"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sha256 = { version = "1.5", default-features = false }
uuid = { version = "1.12.1", features = ["v4"]}
tmflib-derive = { version = "0.1.31" }
# tmflib-derive = { path = "tmflib-derive"}
hex = "0.4.3"
base32 = "0.5.1"
openapiv3 = "2.0.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[dev-dependencies]

