[package]
name = "tmflib-derive"
version = "0.1.14"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Derive macro for the tmflib::HasId trait"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rruckley/tmflib"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = "2.0.63"
