[package]
name = "tmflib-derive"
version = "0.1.29"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Derive macro for the tmflib::HasId trait"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rruckley/tmflib"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.89"
